# customer-feedback-analysis-ai-agent

./: .gitignore  README.md
agent-service/: README.md  compose.yml  pyproject.toml
agent-service/.devcontainer/: devcontainer.json
agent-service/app/: agent.py  configuration.py  db.py  image.py  main.py  state.py  tools.py  utils.py
agent-service/tests/: test_agent.py
agent-ui/: README.md  components.json  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
agent-ui/app/: actions.tsx  globals.css  layout.tsx
agent-ui/app/(auth)/: layout.tsx
agent-ui/app/(chat)/: actions.tsx  example-message.tsx  layout.tsx  page.tsx
agent-ui/components/: agent-message.tsx  analysis-card.tsx  chat-footer.tsx  clear-history.tsx  empty-screen.tsx  external-link.tsx  feedback-agent-msg.tsx  feedback-analytics-dashboard.tsx  message.tsx  providers.tsx
agent-ui/components/chat/: chat-history.tsx  chat-list.tsx  chat-message-actions.tsx  chat-message.tsx  chat-panel.tsx  chat-share-dialog.tsx  chat.tsx  message.tsx  prompt-form.tsx  spinner.tsx
agent-ui/components/flight/: flight-info-card.tsx
agent-ui/components/sidebar/: sidebar-actions.tsx  sidebar-desktop.tsx  sidebar-footer.tsx  sidebar-item.tsx  sidebar-items.tsx  sidebar-list.tsx  sidebar-mobile.tsx  sidebar-toggle.tsx  sidebar.tsx
agent-ui/components/stocks/: message.tsx  stock.tsx
agent-ui/components/ui/: button.tsx  codeblock.tsx  icons.tsx  sheet.tsx
